# etaHEN-Plugins-v2.2

./: CMakeLists.txt  README.md  libelfloader.rar
.github/workflows/: c-cpp.yml
Plugin_samples/Plugin-Loader-v1.12/: CMakeLists.txt
Plugin_samples/Plugin-Loader-v1.12/shellcode/: gen_strings.py
Plugin_samples/Plugin-Loader-v1.12/source/: main.cpp  utils.hpp
Plugin_samples/Plugin-Loader-v1.13/: CMakeLists.txt
Plugin_samples/Plugin-Loader-v1.13/shellcode/: Shellcode.c  build_shellcode.bat  build_shellcode.py  build_shellcode.sh  rebuild_shellcode.py
Plugin_samples/Plugin-Loader-v1.13/source/: main.cpp  patch_shellcore.hpp  utils.cpp  utils.hpp  utils.rar
include/: hijacker.hpp  offsets.hpp  util.hpp
include/hijacker/: hijacker.hpp
libelfloader/: CMakeLists.txt  bootstrap.c  main.c  uri.c
libelfloader/include/: libelfloader.h
libhijacker/: CMakeLists.txt
libhijacker/source/: hijacker.cpp  offsets.cpp  offsets111.cpp  patch_shellcore.hpp
